# Zigbee-led-controller

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  stm32wb55rgvx_FLASH.ld
cmake/: vscode_generated.cmake
cmake/stm32WB55RX/: CMakeLists.txt  cmake_install.cmake
code/01_Kernel/: main.c  main.h  retcode.h
code/02_Bsp/: app_conf.h  hw_conf.h
code/02_Bsp/ST/STM32WBXX/STM32WBxx_HAL_Driver/Inc/: stm32wbxx_hal.h  stm32wbxx_hal_def.h
code/02_Bsp/defines/: defines.h  gpiodefines.c  gpiodefines.h
code/03_App/: LED_Functions.c  LED_Functions.h  app_zigbee.c  app_zigbee.h
code/03_App/managers/: callbackmanager.c  callbackmanager.h  ledsstripmanager.c  ledsstripmanager.h
code/03_App/managers/zigbee/: app_zigbee.c  app_zigbee.h
code/03_App/managers/zigbee/endpoints/: ep_defines.h  ep_ledstrip.c  ep_ledstrip.h  ep_levelcontrol.h  ep_onoff.h
code/05_Drivers/: cpudrv.c  cpudrv.h  gpiodrv.c  gpiodrv.h  ledstripdrv.c  ledstripdrv.h
code/06_Peripherals/: cpu.c  cpu.h  gpio.c  gpio.h  pwm.c  pwm.h  rng.c  rng.h  rtc.c  rtc.h
code/06_Peripherals/ST/: app_entry.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c  stm32wbxx_it.h
code/06_Peripherals/ipcc/: ipcc.c  ipcc.h
code/06_Peripherals/uart/: lpuart.c  lpuart.h  uart_hal_msp.c  usart.c  usart.h
code/07_Middleware/ST/STM32_WPAN/utilities/: dbg_trace.h
code/07_Middleware/ST/STM32_WPAN/zigbee/stack/include/zcl/: zcl.enum.h
code/08_Misc/: stm_logging.h
